--- a/.github/workflows/version-update.yml
+++ b/.github/workflows/version-update.yml
@@ -7,8 +7,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
-        with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
+      - run: echo "version update coming right up" 
 
